--- a/Templates/output.html
+++ b/Templates/output.html
@@ -26,9 +26,12 @@
     </div>
   </div>
 </nav>
-
-   <pre><center> <h2> You can buy at  {{output}} lakh rupees only.</h2></center></pre>
-
+<div class="card text-white bg-info mb-3" style="max-width: 90rem;">
+  <div class="card-body">
+    <pre><center> <h5> You can buy at  {{output}} lakh rupees only.</h5></center></pre>
+  </div>
+   <img src="https://source.unsplash.com/500x300/?car" class="card-img-bottom"  style="max-height: 30rem;"alt="...">
+</div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
